# template_repository_python

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: -branch_name--#issue_number-title.md  feature.md  title.md
