[project]
name = "template-repository-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.4.0",
    "mypy>=1.17.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.6",
    "ty>=0.0.1a7",
    "uv>=0.6.14",
]

[tool.ruff]
lint.select = [
    "I", # isort
    "F", # pyflakes
    "E", # pycodestyle
    "W", # pycodestyle warnings
    "D", # pydocstyle
]
lint.ignore = []
lint.extend-ignore = [
    "D103", # Missing docstring in public function
    "D104", # Missing docstring in public package
    "D105", # undocumented-magic-method
    "D107", # undocumented-public-init
    "D205", # blank-line-after-summary
    "D415", # ends-in-punctuation
    "E501" # Line too long
]
lint.exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "node_modules",
    "venv",
]
line-length = 120

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
show_column_numbers = true
show_error_context = true
strict = false
warn_redundant_casts = true
disable_error_code = [
    "no-redef",
]

[[tool.mypy.overrides]]
module = [
    'lightgbm',
    'optuna',
    'polars',
    'pytz',
    'psutil',
    'requests/*',
    'tensorflow',
    'torch',
    'transformers',
    'xgboost',
]
ignore_missing_imports = true
ignore_errors = true
